# Smart-3D-Medical-Disease-Prediction

./: CODEOWNERS  CONTRIBUTING.md  README.md
ai-models/fchat-llm/: README.md  pyproject.toml  requirements.txt
ai-models/fchat-llm/notebooks/: fchat_pipeline.ipynb
ai-models/fchat-llm/src/fchat/: __init__.py  config.py  data_pipeline.py  quantization.py  training.py
ai-models/image-3d-model/: README.md
ai-models/image-3d-model/notebooks/: model-image.ipynb
ai-models/multi-agent-system/: README.md
ai-models/multi-agent-system/notebooks/: medical_ai_v2_final_with_fixes.ipynb
backend/: README.md
docs/: README.md
frontend/: README.md
